# lsh-dedup

./: pyproject.toml  requirements.txt  test_lsh_dedup.py
.github/workflows/: CI.yml
test_resources/: texts.csv
